# websense

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: pre-commit.yml  publish.yml  test.yml
examples/: advanced_config.py  demo.py  job_listings_crawler.py  news_summarizer.py  social_trends_analyzer.py  weather_tracker.py  web_search.py
src/websense/: __init__.py  cleaner.py  cli.py  fetcher.py  parser.py  scraper.py  searcher.py
tests/: test_cleaner.py  test_cli.py  test_parser.py  test_scraper.py
