[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "websense"
version = "0.1.0"
description = "A modular AI-powered web scraper for data pipelines."
keywords = ["scraper", "web", "automation", "data-extraction", "parsing", "crawler", "ai", "llm", "machine-learning"]
readme = "README.md"
authors = [{name = "Ahmet Ataşoğlu", email = "ahmetatasoglu98@gmail.com"}]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "ask2api"
]
[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
]
[project.urls]
"Homepage" = "https://github.com/atasoglu/websense"
